Layout input completo

--- a/index.html
+++ b/index.html
@@ -8,14 +8,30 @@
     </head>
     <body>
         <h1>Calcola il prezzo del tuo biglietto</h1>
-        <input type="text" id="nome" placeholder="Inserisci il tuo nome e cognome">
-        <input type="number" id="km" placeholder="Inserisci quanti km vuoi percorrere">
-        <input type="number" id="eta" placeholder="Inserisci la tua et&agrave;">
+        <div class="container_white">
+            <div class="row">
+                <div class="col">
+                    <label for="">Nome e Cognome</label>
+                    <input type="text" id="nome" placeholder="Inserisci il tuo nome e cognome">
+                </div>
+                <div class="col">
+                    <label for="">Km da percorrere</label>
+                    <input type="number" id="km" placeholder="Inserisci quanti km vuoi percorrere">
+                </div>
+                <div class="col">
+                    <label for="">Et&agrave;</label>
+                    <input type="number" id="eta" placeholder="Inserisci la tua et&agrave;">
+                </div>
 
-        <button id="calcola">Calcola</button>
-        <button id="annulla">Annulla</button>
-
-        <div>
+            </div>
+            <div class="row">
+                <button id="calcola">Calcola</button>
+                <button id="annulla">Annulla</button>
+            </div>
+        </div>
+        
+        <h1>Il tuo biglietto</h1>
+        <div class="container_white">
             
         </div>
 
