--- a/index.html
+++ b/index.html
@@ -25,14 +25,36 @@
 
             </div>
             <div class="row">
-                <button id="calcola">Calcola</button>
-                <button id="annulla">Annulla</button>
+                <a href="#" id="calcola" class="button">Calcola</a>
+                <a href="index.html" id="annulla" class="button">Annulla</a>
             </div>
         </div>
-        
+        <!-- Biglietto -->
         <h1>Il tuo biglietto</h1>
-        <div class="container_white">
-            
+        <div id="biglietto" class="container_white">
+            <h3 id="dp">DETTAGLIO PASSEGGERI</h3>
+            <div id="riga_biglietto" class="row">
+                <div id="col_nome" class="col">
+                    <h4>NOME PASSEGGERO</h3>
+                    <span id="stampanome"></span>
+                </div>
+                <div class="col">
+                    <h4>Offerta</h4>
+                    <span id="tipobiglietto">Biglietto standard</span>
+                </div>
+                <div class="col">
+                    <h4>Carrozza</h4>
+                    <span>5</span>
+                </div>
+                <div class="col">
+                    <h4>Codice CP</h4>
+                    <span>92911</span>
+                </div>
+                <div class="col">
+                    <h4>Costo biglietto</h4>
+                    <span id="stampaprezzo"></span>
+                </div>
+            </div>
         </div>
 
         <!-- Link js -->
